use observer pattern to get rid of concurrent queue dep

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,26 @@
 cmake_minimum_required(VERSION "3.18")
 project(
-        telebot
-        LANGUAGES CXX
-        DESCRIPTION "A telegram bot for my ayudantias")
+  telebot
+  LANGUAGES CXX
+  DESCRIPTION "A telegram bot for my ayudantias")
 
 set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(third_party/cpp-httplib)
 add_subdirectory(third_party/json)
-add_subdirectory(third_party/concurrentqueue)
 
-add_executable(telebot main.cpp command.cpp)
+add_executable(
+  telebot
+  main.cpp
+  command.cpp
+  get_updates.cpp
+  log_updates.cpp
+  command_handler.cpp
+  get_updates_response.cpp
+  get_updates_payload.cpp)
 
-target_include_directories(telebot PRIVATE
-        ${HTTPLIB_INCLUDE_DIR}
-        ${NLOHMANN_JSON_INCLUDE_INSTALL_DIR}
-        ./third_party/concurrentqueue)
+target_include_directories(telebot PRIVATE ${HTTPLIB_INCLUDE_DIR}
+                                           ${NLOHMANN_JSON_INCLUDE_INSTALL_DIR})
 
-target_link_libraries(telebot PRIVATE
-        nlohmann_json::nlohmann_json
-        ssl
-        crypto
-        httplib::httplib
-        concurrentqueue)
+target_link_libraries(telebot PRIVATE nlohmann_json::nlohmann_json ssl crypto
+                                      httplib::httplib)
